Added game cancellation feature for organisers. Includes: - GameService.cancelGame which validates the organiser has accesss to do this using assertOrganiser function and also guard against cancelling an already cancelled game as extra precaution - GameController.cancelGame POST request to call gameService.cancelGame to update game status to 'CANCELLED' - updated games.html with cancel button option only shown to organiser (like edit button). Also only shown as option if game is not already cancelled - updated GameServiceTest tests to cover new methods